<resources>
    <string name="app_name">TestBleLib</string>
    <string name="no_conn">未连接</string>
    <string name="label_battery">电量:</string>
    <string name="label_batt_status">状态:</string>
    <string name="label_live_desc">描述:</string>
    <string name="label_sync_progress">接收大数据进度:</string>
    <string name="label_choose_file">选择文件</string>
    <string name="label_start_dfu">开始dfu</string>
    <string name="label_open_global_live_pipe">开全局live监听</string>
    <string name="label_open_live">开实时血氧</string>
    <string name="label_close_live">关实时血氧</string>
    <string name="label_enable_monitor">开血氧</string>
    <string name="label_enable_sport">开运动</string>
    <string name="label_enable_bp">开血压</string>
    <string name="label_disable_bp">关血压</string>
    <string name="label_enable_pulse">开脉诊</string>
    <string name="label_enable_hrv">开HRV</string>
    <string name="label_disable_monitor">关监控</string>
    <string name="label_sync">收数据</string>
    <string name="label_sync_without_clear">收数据后不删除数据</string>
    <string name="label_sync_hrv">收HRV数据</string>
    <string name="label_sync_daily">收日常数据</string>
    <string name="label_sync_glu">收血糖</string>
    <string name="label_parse">解析血氧</string>
    <string name="label_parse_sport">解析运动</string>
    <string name="label_parse_hrv">解析HRV</string>
    <string name="label_parse_daily">解析日常数据</string>
    <string name="dfu">固件升级(dfu)进度:</string>
    <string name="pulse_rawdata_on">开rawdata脉诊</string>
    <string name="close_rawdata">关rawdata</string>
    <string name="info_title">关于</string>
    <string name="info_content">App版本:v%s\n算法版本:%d</string>
    <string name="ok">确定</string>
    <string name="parse_success">解析成功</string>
    <string name="label_get_raw_data">获取rawdata</string>

    <string-array name="spinner_items_period_monitor_duration">
        <item>10分钟</item>
        <item>1小时</item>
        <item>5小时</item>
        <item>10小时</item>
    </string-array>

    <string name="period_monitor_setting">查看定时监测</string>
    <string name="enable_period_monitor">打开定时监测</string>
    <string name="disable_period_monitor">关闭定时监测</string>
    <string name="period_monitor_loop">每天</string>
    <string name="period_monitor_start_time">选择开始时间</string>
    <string name="period_monitor_duration">选择监测时长</string>

    <string name="get_mode">查看当前模式</string>
    <string name="turn_on_glu">开血糖</string>
    <string name="turn_off_glu">关血糖</string>

    <string name="choose_file">选择文件</string>
    <string name="not_choose">未选中</string>
    <string name="not_choose_tip">未选择文件</string>
    <string name="period_disable_tip">如果定时监测已开启，定时结束将在本次定时监测结束后生效</string>
    <string name="period_monitor_start_tip">请选择开始时间</string>
    <string name="home_bp_title">血压测量</string>
    <string name="bp_test_prepare_tip">请用手指紧密接触下表面电极</string>
    <string name="bp_test_begin">即将开始，请做好准备</string>
    <string name="bp_test_done_tip">测量完成</string>
    <string name="bp_test_tip">请用手指紧密接触下表面电极，直到测量结束</string>
    <string name="result_sbp">收缩压(mmHg)</string>
    <string name="result_dbp">舒张压(mmHg)</string>
    <string name="bp_test_pr_tag">脉率(次/分钟)</string>
    <string name="bp_test_done">完成</string>
    <string name="bp_test_start_time">开始时间:%s</string>
    <string name="get_enso_mode">获取enso模式</string>

</resources>
