<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/home_bp_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="开始时间:14:28"
        android:textColor="#666666"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll_prepare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/bp_test_prepare_tip"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/bp_test_begin"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="40dp"
        android:text="@string/bp_test_done_tip"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_live_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_pr_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            tools:text="66" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#FDF0EC"
            android:visibility="gone"
            tools:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="00:00"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_test_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="5dp"
        android:text="@string/bp_test_tip"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/tv_sbp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result_sbp"
                android:textColor="#666666"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_dbp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sbp_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_dbp"
                app:layout_constraintTop_toBottomOf="@id/tv_sbp"
                tools:text="140" />

            <TextView
                android:id="@+id/tv_dbp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/result_dbp"
                android:textColor="#666666"
                app:layout_constraintLeft_toRightOf="@id/tv_sbp"
                app:layout_constraintRight_toLeftOf="@id/tv_pr"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_dbp_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/tv_sbp"
                app:layout_constraintRight_toLeftOf="@id/tv_pr"
                app:layout_constraintTop_toBottomOf="@id/tv_dbp"
                tools:text="103" />

            <TextView
                android:id="@+id/tv_pr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/bp_test_pr_tag"
                android:textColor="#666666"
                app:layout_constraintBottom_toBottomOf="@+id/tv_dbp"
                app:layout_constraintLeft_toRightOf="@id/tv_dbp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_dbp" />

            <TextView
                android:id="@+id/tv_res_pr_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/tv_dbp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pr"
                tools:text="66" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/bp_test_done"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="#0E85FF"/>
    </LinearLayout>

</LinearLayout>